--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,18 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
 }
 
 android {
     namespace 'com.javohirbekcoder.puzzle15'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.javohirbekcoder.puzzle15"
         minSdk 23
-        targetSdk 33
-        versionCode 10
+        targetSdk 34
+        versionCode 11
         versionName "v2.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -35,10 +37,12 @@ android {
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.preference:preference:1.2.0'
     implementation 'com.google.android.gms:play-services-ads:21.5.0'
+    implementation 'com.google.firebase:firebase-crashlytics:18.4.3'
+    implementation 'com.google.firebase:firebase-analytics:21.3.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -50,4 +54,7 @@ dependencies {
 
     //confetti animation
     implementation 'nl.dionsegijn:konfetti-xml:2.0.2'
+
+    //Work manager
+    implementation "androidx.work:work-runtime:2.8.1"
 }
